[tool.poetry]
name = "python-example"
version = "0.0.1"
description = "doing ml things on casa"
authors = ["Anthony Corletti <anthcor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
